test/js/bun/util/__snapshots__/inspect-error.test.js.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`error.cause 1`] = `
"1 | import { test, expect } from "bun:test";
2 | 
3 | test("error.cause", () => {
4 |   const err = new Error("error 1");
5 |   const err2 = new Error("error 2", { cause: err });
                   ^
error: error 2
      at [dir]/inspect-error.test.js:5:16

1 | import { test, expect } from "bun:test";
2 | 
3 | test("error.cause", () => {
4 |   const err = new Error("error 1");
                  ^
error: error 1
      at [dir]/inspect-error.test.js:4:15
"
`;

exports[`Error 1`] = `
" 9 |       .replaceAll("//", "/"),
10 |   ).toMatchSnapshot();
11 | });
12 | 
13 | test("Error", () => {
14 |   const err = new Error("my message");
                   ^
error: my message
      at [dir]/inspect-error.test.js:14:15
"
`;

exports[`BuildMessage 1`] = `
"2 | const duplicateConstDecl = 456;
          ^
error: "duplicateConstDecl" has already been declared
    at [dir]/inspect-error-fixture-bad.js:2:7

1 | const duplicateConstDecl = 123;
          ^
note: "duplicateConstDecl" was originally declared here
   at [dir]/inspect-error-fixture-bad.js:1:7"
`;
